<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.sunnylabs</groupId>
    <artifactId>logging-example</artifactId>
    <version>1.0-SNAPSHOT</version>

    <dependencies>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>10</source>
                    <target>10</target>
                    <compilerArgs>
                        <arg>--add-modules</arg><arg>jdk.unsupported</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M1</version>
                <configuration>
                    <forkCount>1.0C</forkCount>
                    <reuseForks>true</reuseForks>
                    <rerunFailingTestsCount>3</rerunFailingTestsCount>
                    <!--<systemPropertyVariables>-->
                        <!--<org.slf4j.simpleLogger.defaultLogLevel>WARN-->
                        <!--</org.slf4j.simpleLogger.defaultLogLevel>-->
                        <!--<org.slf4j.simpleLogger.showDateTime>true-->
                        <!--</org.slf4j.simpleLogger.showDateTime>-->
                        <!--<java.util.logging.config.file>logging-notworking.properties-->
                        <!--</java.util.logging.config.file>-->
                    <!--</systemPropertyVariables>-->
                    <systemPropertyVariables>
                        <log4j.configuration>log4j-abby.xml</log4j.configuration>
                    </systemPropertyVariables>
                    <argLine>--illegal-access=permit</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>